--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <script src="/password-generator/assets/script.js"></script>
     <title>Password Generator</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
+    <link rel="stylesheet" href="/password-generator/assets/style.css" />
+          </head>
   <body>
     <div class="wrapper">
       <header>
@@ -29,6 +30,6 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    
   </body>
 </html>
