--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           ></textarea>
         </div>
         <div class="card-footer">
-          <button id="generate" class="btn">Generate Password</button>
+          <button onclick="passwordLength()" class="btn">Generate Password</button>
         </div>
       </div>
     </div>
