--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="/password-generator/assets/script.js"></script>
+    <script src="assets\script.js"></script>
     <title>Password Generator</title>
-    <link rel="stylesheet" href="/password-generator/assets/style.css" />
+    <link rel="stylesheet" href="assets\style.css" />
           </head>
   <body>
     <div class="wrapper">
