--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <script src="assets\script.js"></script>
     <title>Password Generator</title>
     <link rel="stylesheet" href="assets\style.css" />
-          </head>
+  </head>
   <body>
     <div class="wrapper">
       <header>
         <h1>Password Generator</h1>
       </header>
+      <!-- Password generator box -->
       <div class="card">
         <div class="card-header">
           <h2>Generate a Password</h2>
@@ -25,11 +26,13 @@
             aria-label="Generated Password"
           ></textarea>
         </div>
+        <!-- Generate password -->
         <div class="card-footer">
-          <button onclick="writePassword()" class="btn">Generate Password</button>
+          <button onclick="writePassword()" class="btn">
+            Generate Password
+          </button>
         </div>
       </div>
     </div>
-    
   </body>
 </html>
