console error solved

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <!-- Generate password -->
         <div class="card-footer">
-          <button onclick="writePassword()" class="btn">
+          <button onclick="writePassword()" id="btn">
             Generate Password
           </button>
         </div>
